# ChangeLog for x11-libs/qt-demo
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-demo/ChangeLog,v 1.22 2009/06/06 08:42:28 maekke Exp $

  06 Jun 2009; Markus Meier <maekke@gentoo.org> qt-demo-4.5.1.ebuild:
  amd64 stable, bug #266201

  03 Jun 2009; Ben de Groot <yngwin@gentoo.org> qt-demo-4.5.1.ebuild:
  Add kde useflag, for selecting media-sound/phonon

  02 Jun 2009; Christian Faulhammer <fauli@gentoo.org> qt-demo-4.5.1.ebuild:
  stable x86, bug 266201

  14 May 2009; Ben de Groot <yngwin@gentoo.org> -qt-demo-4.5.0.ebuild:
  Remove old

  13 May 2009; Brent Baude <ranger@gentoo.org> qt-demo-4.5.1.ebuild:
  Marking qt-demo-4.5.1 ppc stable for bug 266201

*qt-demo-4.5.1 (30 Apr 2009)

  30 Apr 2009; Ben de Groot <yngwin@gentoo.org> +qt-demo-4.5.1.ebuild:
  Version bump

  01 Apr 2009; Joseph Jezak <josejx@gentoo.org> qt-demo-4.5.0.ebuild:
  Marked ~ppc for bug #261313.

  16 Mar 2009; Alexis Ballier <aballier@gentoo.org> qt-demo-4.5.0.ebuild:
  keyword ~x86-fbsd

*qt-demo-4.5.0 (05 Mar 2009)

  05 Mar 2009; Markos Chandras <hwoarang@gentoo.org>
  +files/qt-demo-4.5.0-fixes.patch, +qt-demo-4.5.0.ebuild:
  Initial import of qt-demo-4.5.0 ( fixed bug #259113 ). Thanks to Alex Alexander (
  alex.alexander@gmail.com ) for the patch

  18 Feb 2009; Jeroen Roovers <jer@gentoo.org> qt-demo-4.4.2.ebuild:
  Stable for HPPA (bug #248083).

  04 Feb 2009; Brent Baude <ranger@gentoo.org> qt-demo-4.4.2.ebuild:
  Marking qt-demo-4.4.2 ppc64 stable for bug 248038

*qt-demo-4.4.2-r1 (01 Feb 2009)

  01 Feb 2009; Ben de Groot <yngwin@gentoo.org> +qt-demo-4.4.2-r1.ebuild:
  Offer choice between qt-phonon and media-sound/phonon. Fixes bug 254987.

  18 Jan 2009; Markus Meier <maekke@gentoo.org> qt-demo-4.4.2.ebuild:
  amd64/x86 stable, bug #248038

  17 Jan 2009; nixnut <nixnut@gentoo.org> qt-demo-4.4.2.ebuild:
  ~ppc'd #248038

  06 Jan 2009; Ben de Groot <yngwin@gentoo.org> -qt-demo-4.4.0.ebuild,