@@ -1,11 +1,14 @@
 AUX qt-demo-4.5.0-fixes.patch 960 RMD160 054ac398d4f1664b12cac609d372310f8598d102 SHA1 59f26d12ec4453fb2484070b6db3c52fc34b0c1f SHA256 d374b7306b7ae8041f296300362e8894e588b352bf333b717a8f409e1aa33186
 DIST qt-mac-opensource-src-4.4.2.tar.bz2 100715282 RMD160 6c92c2d745ca75fc9779f360825a48c29689ff61 SHA1 217e2d4f80d1c6d68d6bdfe8c757b2bfee929421 SHA256 1191d87e55a718a6cd2d20c2cf43f93ca98de5aebfa49152ef2551ee36914e56
 DIST qt-mac-opensource-src-4.5.1.tar.bz2 112558395 RMD160 eaab3d822c5a752c800e4b654cf45ef0b4b18f81 SHA1 c658aa96b715b5242d415d8b05eb81968dfaea67 SHA256 5bdfe81e0955614827550a19856c5e97af7586e06474a602ae66640fad000116
+DIST qt-mac-opensource-src-4.5.2.tar.bz2 113874121 RMD160 245efc87416788f37b4b660153a53848308d822f SHA1 da62223757a8c61c8f0e895631bb6ff06beae229 SHA256 ca990057b54f43abe0647bbd1cc7f25945e97c86caee46310d2c3be95aa7dd53
 DIST qt-x11-opensource-src-4.4.2-headers.tar.bz2 2509611 RMD160 3424d4049f1c06959bd57a98e3933636515c60fa SHA1 f0945230b8856b446f03473c18474e9224b30fcf SHA256 aa02d9e2c017ff92d91ef73781d4d1a28be53136886ac99275df053fe31d1fff
 DIST qt-x11-opensource-src-4.4.2.tar.bz2 102816706 RMD160 5719ab5800ca181417e0dff7f961af7b371ddd97 SHA1 0bc56934565f529a2708533a4f160fbc87b9d9e0 SHA256 0530fefc452e5029877739164e133de7df5faa519b0fb3d9fcf40b467350c675
 DIST qt-x11-opensource-src-4.5.1.tar.bz2 114667436 RMD160 702d7c6bb9787cd5602dcb8afce52bdfcfd52179 SHA1 50ba9b6d2eb7056e47dc53775be509c4ff6ec015 SHA256 b994c40e41386c9d82f025dd9198e1161717021216680adef97da3f1b8947c75
+DIST qt-x11-opensource-src-4.5.2.tar.bz2 116015284 RMD160 1af31d7fe66665e718f0c728b41becea9996fba7 SHA1 bf2dd175cade15f3f505fe6aac1401bdbfeb4e5b SHA256 d26d94c9cb90dfe16a13b39ac7157f66ec9f5fbbf9d7faa57f7466157721f836
 EBUILD qt-demo-4.4.2-r1.ebuild 1435 RMD160 d4ed75f5f3e7879f6a36f24014c354c468a0846e SHA1 f9d9350e2b3b95d2e784470eff5bee190e0b2f38 SHA256 deb68008678f068d6dbdaa4c1c6555cac33fa02d797950f43f7af953f2d17fc4
 EBUILD qt-demo-4.4.2.ebuild 1444 RMD160 ba371ca28f48490e53e81fb31a43e93ba1429d80 SHA1 db84ed7d1bc73ce6db32199c95ad15eeedd36dc2 SHA256 a422a86e60f23506d5d73edc33eee27d3599d76ba524e546b272a0ed45cf0e49
 EBUILD qt-demo-4.5.1.ebuild 1363 RMD160 13f6ce09270e8d13d3161e0beca26ec0c8144461 SHA1 d2a3ed429b7884f9431c05fd287112cc375cdb67 SHA256 bcc4875f04da4aaec362dcc05672295e4160f22f806d51ef41600157394b1bb8
-MISC ChangeLog 2964 RMD160 a8a56702a26f01478e98af813e2a99751d9ae2cb SHA1 f247edb028ea3088a01da660635063a4cc4c366c SHA256 e8243b1072642b5973311bb72405d6e18b2bbca99154ade91085e434b58081d6
+EBUILD qt-demo-4.5.2.ebuild 1363 RMD160 303ff17141017aeb2f160e847898ecf439ef1d10 SHA1 be1fa8241b09e902be6722fa9c3fd39df58bd67e SHA256 3222ec734a831f7048bab4507c98d98059e05c6f4ad6c595ca0ee2e9109578ba
+MISC ChangeLog 3081 RMD160 2ed2b77bb3f3f4657ab243c0db7d995de67748e1 SHA1 e1a861b8167b8418d40740170f433b9a120614bd SHA256 6ec24f4f1060f2141920a1b83ec4c021c5b72548b01235ba4e0a6c4856216db5
 MISC metadata.xml 156 RMD160 d76590850d56864c8d99e6877ed15841b55ef1fc SHA1 e872bab086832a9db3f0fa9b1897c70577d3af21 SHA256 94c4f580c1a55f8a5e1a1dcdd6dedfea0b8bd78c1d7137c354938d73c49e4448
