@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/qt-demo
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-demo/ChangeLog,v 1.22 2009/06/06 08:42:28 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-demo/ChangeLog,v 1.23 2009/06/27 19:18:07 yngwin Exp $
+
+*qt-demo-4.5.2 (27 Jun 2009)
+
+  27 Jun 2009; Ben de Groot <yngwin@gentoo.org> +qt-demo-4.5.2.ebuild:
+  Version bump
 
   06 Jun 2009; Markus Meier <maekke@gentoo.org> qt-demo-4.5.1.ebuild:
   amd64 stable, bug #266201
